Partially write contributions

--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,13 @@
 	\end{frame}
 	
 	\input{section_introduction}
+	\input{section_contributions}
+	
+	\begin{frame}{}
+		\begin{center}
+			{\fontsize{20}{20}\selectfont Thank You!}
+		\end{center}
+	\end{frame}
 	
 	\begin{frame}[allowframebreaks]{References}
 		\setbeamertemplate{bibliography item}[text]
