--- a/refs.bib
+++ b/refs.bib
@@ -80,3 +80,21 @@
 	@note = {\url{https://eprint.iacr.org/2023/1255}},
 	@url = {https://eprint.iacr.org/2023/1255}
 }
+
+@InProceedings{EC:SetThaWah23b,
+	author="Setty, Srinath
+	and Thaler, Justin
+	and Wahby, Riad",
+	@editor="Joye, Marc
+	and Leander, Gregor",
+	title="Unlocking the Lookup Singularity with Lasso",
+	booktitle="EUROCRYPT 2024",
+	year="2024",
+	@publisher="Springer Nature Switzerland",
+	@address="Cham",
+	@pages="180--209",
+	@isbn="978-3-031-58751-1",
+	@doi="10.1007/978-3-031-58751-1_7",
+	@volume="14656",
+	@series="Lecture Notes in Computer Science",
+}
