Finish our contributions

--- a/macros.tex
+++ b/macros.tex
@@ -6,6 +6,13 @@
 \newcommand{\nb}{{n_b}}
 \newcommand{\id}{\mathsf{id}}
 
+% asymptotic notations
+\newcommand{\BigO}{\mathcal{O}}
+\newcommand{\tidleO}{\tilde{\BigO}}
+
+% functions
+\newcommand{\size}[1]{\left|#1\right|}
+
 % mathbf
 \newcommand{\bs}{\mathbf{s}}
 \newcommand{\bt}{\mathbf{t}}
