--- a/section_introduction.tex
+++ b/section_introduction.tex
@@ -40,7 +40,7 @@
 \begin{frame}{Non-Subsequence Arguments}
 	\textbf{Non-Subsequence Arguments.} Prove that $\bs$ is not a subsequence of $\bt$.
 	
-	\textbf{Applications.} \makered{Fill here.}
+	\textbf{Applications.} (i) Avoiding disease in DNA patterns, (ii) transactions do not match history of malicious blockchains, (iii) a sequence of phonemes is not related to some sound.
 	
 	\textbf{SNARKs for Non-Subsequences.} Non-trivial since one needs to check $\binom{N}{n}$ possible subsequence arguments.
 	
