Finish describing building blocks

--- a/macros.tex
+++ b/macros.tex
@@ -14,5 +14,10 @@
 \newcommand{\size}[1]{\left|#1\right|}
 
 % mathbf
+\newcommand{\bi}{\mathbf{i}}
+\newcommand{\br}{\mathbf{r}}
 \newcommand{\bs}{\mathbf{s}}
 \newcommand{\bt}{\mathbf{t}}
+
+% mathbb
+\newcommand{\FF}{\mathbb{F}}
