--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,7 @@
 	
 	\input{section_introduction}
 	\input{section_contributions}
+	\input{section_building_blocks}
 	
 	\begin{frame}{}
 		\begin{center}
