--- a/refs.bib
+++ b/refs.bib
@@ -98,3 +98,16 @@
 	@volume="14656",
 	@series="Lecture Notes in Computer Science",
 }
+
+@inproceedings{FOCS:LundFKN90,
+	author={Lund, C. and Fortnow, L. and Karloff, H. and Nisan, N.},
+	booktitle={FOCS 1990}, 
+	title={{Algebraic methods for interactive proof systems}}, 
+	year={1990},
+	@volume={1},
+	@number={},
+	@pages={2--10},
+	@keywords={Polynomials;Context},
+	@doi={10.1109/FSCS.1990.89518},
+	@publisher="IEEE",
+}
