--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,8 @@
 	\input{section_introduction}
 	\input{section_contributions}
 	\input{section_building_blocks}
+	\input{section_algorithm_for_searching_subsequences}
+	\input{section_transforming_to_lookup_arguments}
 	
 	\begin{frame}{}
 		\begin{center}
