--- a/section_introduction.tex
+++ b/section_introduction.tex
@@ -13,9 +13,11 @@
 	
 	\textbf{Applications.} Proving execution of RAM programs.
 	
-	\textbf{SNARK unfriendly.} Lookup arguments were once considered SNARK unfriendly since representing lookup statement by circuits is not efficient.
+	\textbf{SNARK unfriendly.} Lookup arguments were SNARK unfriendly since representing lookup by circuits is not efficient.
 	
-	\textbf{Advances.}  $\mathsf{cq}$ \cite{EPRINT:EagFioGab22}, $\mathsf{cq}^+, \mathsf{cq}^{++}$ \cite{PKC:CFFLL24} and $\mathsf{Locq}$ \cite{PKC:ZSG24} based on the following core lemma from Hab{\"o}ck \cite{EPRINT:Habock22b}.
+	\textbf{Advances.} Plookup \cite{EPRINT:GabWil20}, Hab{\"o}ck \cite{EPRINT:Habock22b}, Caulk \cite{CCS:ZBKMNS22}.
+	
+	\textbf{Recent Advances.} $\mathsf{cq}$ \cite{EPRINT:EagFioGab22}, $\mathsf{cq}^+, \mathsf{cq}^{++}$ \cite{PKC:CFFLL24} and $\mathsf{Locq}$ \cite{PKC:ZSG24} based on the following core lemma from Hab{\"o}ck \cite{EPRINT:Habock22b}.
 	\begin{lemma}[Hab{\"o}ck \cite{EPRINT:Habock22b}]
 		$\{a_j\}_{j \in [\na]} \subseteq \{b_i\}_{i \in [\nb]}$ iff one can determine $(m_i)_{i \in [\nb]}$ s.t.
 		\begin{equation*}
