Partially write explaination for technical overview

--- a/macros.tex
+++ b/macros.tex
@@ -5,6 +5,7 @@
 \newcommand{\na}{{n_a}}
 \newcommand{\nb}{{n_b}}
 \newcommand{\id}{\mathsf{id}}
+\newcommand{\enc}{\mathsf{enc}}
 
 % asymptotic notations
 \newcommand{\BigO}{\mathcal{O}}
