Finish technical overview for presentation

--- a/macros.tex
+++ b/macros.tex
@@ -6,10 +6,16 @@
 \newcommand{\nb}{{n_b}}
 \newcommand{\id}{\mathsf{id}}
 \newcommand{\enc}{\mathsf{enc}}
+\newcommand{\aux}{\mathsf{aux}}
+\newcommand{\pp}{\mathsf{pp}}
 
 % asymptotic notations
 \newcommand{\BigO}{\mathcal{O}}
 \newcommand{\tidleO}{\tilde{\BigO}}
+\newcommand{\tv}{\mathsf{tv}}
+\newcommand{\tp}{\mathsf{tp}}
+\newcommand{\cs}{\mathsf{cs}}
+\newcommand{\ps}{\mathsf{ps}}
 
 % functions
 \newcommand{\size}[1]{\left|#1\right|}
@@ -22,3 +28,22 @@
 
 % mathbb
 \newcommand{\FF}{\mathbb{F}}
+\newcommand{\GG}{\mathbb{G}}
+\newcommand{\HH}{\mathbb{H}}
+\newcommand{\ZZ}{\mathbb{Z}}
+\newcommand{\ZZplus}{\ZZ_+}
+
+% Algorithms
+\newcommand{\Setup}{\mathsf{Setup}}
+\newcommand{\Com}{\mathsf{Com}}
+\newcommand{\Open}{\mathsf{Open}}
+\newcommand{\Eval}{\mathsf{Eval}}
+\newcommand{\Reduce}{\mathsf{Reduce}}
+\newcommand{\Verify}{\mathsf{Verify}}
+
+% Parites
+\newcommand{\Prover}{\mathcal{P}}
+\newcommand{\Verifier}{\mathcal{V}}
+
+% enviroments
+\newcommand{\innerproduct}[2]{\left\langle#1,#2\right\rangle}
