--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,7 @@
 	\input{section_building_blocks}
 	\input{section_algorithm_for_searching_subsequences}
 	\input{section_transforming_to_lookup_arguments}
+	\input{section_efficiency}
 	
 	\begin{frame}{}
 		\begin{center}
