--- a/refs.bib
+++ b/refs.bib
@@ -155,3 +155,21 @@
 	@location = {Los Angeles, CA, USA},
 	@series = {CCS '22}
 }
+
+@InProceedings{AC:KatZavGol10,
+	author="Kate, Aniket
+	and Zaverucha, Gregory M.
+	and Goldberg, Ian",
+	@editor="Abe, Masayuki",
+	title="{Constant-Size Commitments to Polynomials and Their Applications}",
+	booktitle="ASIACRYPT 2010",
+	year="2010",
+	@publisher="Springer Berlin Heidelberg",
+	@address="Berlin, Heidelberg",
+	@pages="177--194",
+	@abstract="We introduce and formally define polynomial commitment schemes, and provide two efficient constructions. A polynomial commitment scheme allows a committer to commit to a polynomial with a short string that can be used by a verifier to confirm claimed evaluations of the committed polynomial. Although the homomorphic commitment schemes in the literature can be used to achieve this goal, the sizes of their commitments are linear in the degree of the committed polynomial. On the other hand, polynomial commitments in our schemes are of constant size (single elements). The overhead of opening a commitment is also constant; even opening multiple evaluations requires only a constant amount of communication overhead. Therefore, our schemes are useful tools to reduce the communication cost in cryptographic protocols. On that front, we apply our polynomial commitment schemes to four problems in cryptography: verifiable secret sharing, zero-knowledge sets, credentials and content extraction signatures.",
+	@isbn="978-3-642-17373-8",
+	@doi="10.1007/978-3-642-17373-8_11",
+	@volume="6477",
+	@series="Lecture Notes in Computer Science",
+}
