--- a/section_introduction.tex
+++ b/section_introduction.tex
@@ -13,7 +13,7 @@
 	
 	\textbf{Applications.} Proving execution of RAM programs.
 	
-	\textbf{SNARK unfriendly.} Lookup arguments were SNARK unfriendly since representing lookup by circuits is not efficient.
+	\textbf{SNARK unfriendly.} Lookup arguments were SNARK unfriendly since representing lookup by circuits is inefficient.
 	
 	\textbf{Advances.} Plookup \cite{EPRINT:GabWil20}, Hab{\"o}ck \cite{EPRINT:Habock22b}, Caulk \cite{CCS:ZBKMNS22}.
 	
@@ -42,7 +42,7 @@
 \begin{frame}{Non-Subsequence Arguments}
 	\textbf{Non-Subsequence Arguments.} Prove that $\bs$ is not a subsequence of $\bt$.
 	
-	\textbf{Applications.} (i) Avoiding disease in DNA patterns, (ii) transactions do not match history of malicious blockchains, (iii) a sequence of phonemes is not related to some sound.
+	\textbf{Applications.} (i) Avoiding disease in DNA patterns, (ii) transactions do not match the history of malicious blockchains, (iii) a sequence of phonemes is not related to some sound.
 	
 	\textbf{SNARKs for Non-Subsequences.} Non-trivial since one needs to check $\binom{N}{n}$ possible subsequence arguments.
 	
