--- a/section_building_blocks.tex
+++ b/section_building_blocks.tex
@@ -8,6 +8,14 @@
 		\item $\Open(\pp, \sigma(f), f(\vec{X}), \aux)\to b$
 		\item $ \Eval \innerproduct {\Prover( f(\vec{X}), \aux )} {\Verifier} (\pp, \sigma(f), \br, e)\to b$
 	\end{itemize}
+	
+	\textbf{Properties.}
+	\begin{itemize}
+		\item $\sigma(f)$ is succinct. 
+		\item Completeness.
+		\item  Binding.
+		\item $\Eval$ is knowledge-sound.
+	\end{itemize}
 \end{frame}
 \begin{frame}{Multivariate Sumcheck}
 	Given $S \in \FF$ and $f \in \FF[\mu]$ as $\mu$-variate polynomial, multivariate sumcheck \cite{FOCS:LundFKN90} allows one to prove that 
