--- a/section_transforming_to_lookup_arguments.tex
+++ b/section_transforming_to_lookup_arguments.tex
@@ -34,6 +34,7 @@
 		\eqref{equation:system-of-equivalences-for-constraints-2-and-3} \iff (p_j - p_{j - 1}, p_{j - 1} + 1, t_j) \in \enc(\bs_\perp).
 	$
 	
+	\pause
 	\begin{center}
 		\textbf{How to guarantee well-formedness of $\enc(\bs_\perp)$?}
 	\end{center}
@@ -44,6 +45,7 @@
 	
 	$\size{\enc(\bs_\perp)} = (n + 1)\cdot (\size{\Sigma} + 1) = \BigO(n \times \size{\Sigma})$ which is inefficient.
 	
+	\pause
 	\begin{center}
 		\textbf{Is there any alternative way?}
 	\end{center}
