--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,8 @@
 	\begin{frame}{}
 		\begin{center}
 			{\fontsize{20}{20}\selectfont Thank You!}
+			
+			\url{http://ia.cr/2024/1264}
 		\end{center}
 	\end{frame}
 	
