--- a/section_introduction.tex
+++ b/section_introduction.tex
@@ -46,6 +46,7 @@
 	
 	\textbf{SNARKs for Non-Subsequences.} Non-trivial since one needs to check $\binom{N}{n}$ possible subsequence arguments.
 	
+	\pause
 	\begin{center}
 		\emph{Can we construct succinct non-subsequence arguments with efficient proving time and sublinear verification time?}
 	\end{center}
