--- a/section_transforming_to_lookup_arguments.tex
+++ b/section_transforming_to_lookup_arguments.tex
@@ -36,7 +36,7 @@
 	
 	\pause
 	\begin{center}
-		\textbf{How to guarantee well-formedness of $\enc(\bs_\perp)$?}
+		\emph{How to guarantee well-formedness of $\enc(\bs_\perp)$?}
 	\end{center}
 \end{frame}
 
@@ -47,7 +47,7 @@
 	
 	\pause
 	\begin{center}
-		\textbf{Is there any alternative way?}
+		\emph{Is there any alternative way?}
 	\end{center}
 \end{frame}
 
