Fix minor errors

--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 
 \title{Succinct Non-Subsequence Arguments}
 \date{13 September 2024}
-\author{ S. Ling\and \textbf{K. H. Tang}\and K. Vu\and H. Wang\and Y. Yan}
+\author{ S. Ling\and K. H. Tang\and K. Vu\and H. Wang\and Y. Yan}
 
 \AtBeginSection[]{
 	\begin{frame}
