--- a/section_algorithm_for_searching_subsequences.tex
+++ b/section_algorithm_for_searching_subsequences.tex
@@ -20,8 +20,8 @@
 	Hence,
 	\begin{equation*}
 		\begin{aligned}
-			&p_N < n \Rightarrow \text{subsequence},\\
-			&p_N = n \Rightarrow \text{non-subsequence}.
+			&p_N < n \Rightarrow \text{non-subsequence},\\
+			&p_N = n \Rightarrow \text{subsequence}.
 		\end{aligned}
 	\end{equation*}
 \end{frame}
