--- a/section_efficiency.tex
+++ b/section_efficiency.tex
@@ -1,7 +1,7 @@
 % !TEX root = main.tex
 \section{Efficiency}
 \begin{frame}{Efficiency}
-	\textbf{Construction.}
+	\textbf{Construction.} $l_n = \BigO(\log n)$, $l_N = \BigO(\log N)$, $l_\Sigma = \BigO(\log \size{\Sigma})$.
 	\begin{itemize}
 		\item \textit{Input size.}  $\BigO(\cs(l_n)+ \cs(l_N)+\cs(l_\Sigma) )$.
 		\item \textit{Proof size.} $
