--- a/section_transforming_to_lookup_arguments.tex
+++ b/section_transforming_to_lookup_arguments.tex
@@ -87,5 +87,5 @@
 			\{(p_j - p_{j - 1}, t_j - v_j)\}_{j \in [N]} \subseteq \{(0,i)\}_{i \in [-\size{\Sigma}, \size{\Sigma}]\setminus\{0\}} \cup \{(1, 0)\},
 		\end{cases}
 	\end{equation*}
-	and $p_N < n$ (respectively, $p_N = n$).
+	and $p_N = n$ (respectively, $p_N < n$).
 \end{frame}
